add some  fixes: number not counted, words between // and /* blabla */ not counted also